--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Home Section Starts -->
     <section class="home" id="home">
         <h1>Find Your Car</h1>
-        <img  src="/images/homeCars.png" alt="Img">
+        <img  src="homeCars.png" alt="Img">
         <a href="#" class="btn">Explore Cars</a>
     </section>
     <!-- Home Section Ends -->
@@ -104,7 +104,7 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="images/vh1.png" alt="IMG 1">
+                <img src="vh1.png" alt="IMG 1">
                 <div class="content">
                     <h3>New Model</h3>
                     <div class="price"><span>Price:</span>&#8377 3,50,000/-</div>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="images/vh2.png" alt="IMG 1">
+                <img src="vh2.png" alt="IMG 1">
                 <div class="content">
                     <h3>New Model</h3>
                     <div class="price"><span>Price:</span>&#8377 3,50,000/-</div>
@@ -136,7 +136,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="images/vh3.png" alt="IMG 1">
+                <img src="vh3.png" alt="IMG 1">
                 <div class="content">
                     <h3>New Model</h3>
                     <div class="price"><span>Price:</span>&#8377 3,50,000/-</div>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="images/vh4.png" alt="IMG 1">
+                <img src="vh4.png" alt="IMG 1">
                 <div class="content">
                     <h3>New Model</h3>
                     <div class="price"><span>Price:</span>&#8377 3,50,000/-</div>
@@ -168,7 +168,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="images/vh5.png" alt="IMG 1">
+                <img src="vh5.png" alt="IMG 1">
                 <div class="content">
                     <h3>New Model</h3>
                     <div class="price"><span>Price:</span>&#8377 3,50,000/-</div>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="images/vh6.png" alt="IMG 1">
+                <img src="vh6.png" alt="IMG 1">
                 <div class="content">
                     <h3>New Model</h3>
                     <div class="price"><span>Price:</span>&#8377 3,50,000/-</div>
