--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/wheel.png" type="image/x-icon">
+    <link rel="icon" href="wheel.png" type="image/x-icon">
     <title>RideExchange</title>
     <!-- SwiperJS.com CSS Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
